for jspm publishing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "thisplay",
-  "version": "1.0.0",
+  "main": "index.js",
+  "version": "2.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
