--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
   "name": "thisplay",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "",
+  "main": [
+    "dist/thisplay.min.js"
+  ],
   "authors": [
     "baleian <baleian90@gmail.com>"
   ],
