--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0"
+  },
+  "jspm": {
+    "shim": {
+      "alizzwell/thisplay": {
+        "deps": ["d3"],
+        "exports": "d3"
+      }
+    }
   }
 }
